# filesystem

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
components/chroot/: Cargo.toml  README.md
components/chroot/src/: lib.rs
components/gate/: Cargo.toml  README.md
components/gate/src/: lib.rs
components/latch-2/: Cargo.toml  README.md
components/latch-2/src/: lib.rs
components/latch-3/: Cargo.toml  README.md
components/latch-3/src/: lib.rs
components/latch-4/: Cargo.toml  README.md
components/latch-4/src/: lib.rs
components/latch-allow/: Cargo.toml  README.md
components/latch-allow/src/: lib.rs
components/latch-deny/: Cargo.toml  README.md
components/latch-deny-all/: Cargo.toml  README.md
components/latch-deny-all/src/: lib.rs
components/latch-deny/src/: lib.rs
components/latch-glob/: Cargo.toml  README.md
components/latch-glob/src/: lib.rs
components/latch-grant-all/: Cargo.toml  README.md
components/latch-n2/: Cargo.toml  README.md
components/latch-n2/src/: lib.rs
components/latch-n3/: Cargo.toml  README.md
components/latch-n4/: Cargo.toml  README.md
components/latch-n5/: Cargo.toml  README.md
components/latch-permit-all/: Cargo.toml  README.md
components/latch-readonly/: Cargo.toml  README.md
components/readonly/: Cargo.toml  README.md
components/tracing/: Cargo.toml  README.md
crates/latch-n/: Cargo.toml
tests/: readonly.wac
tests/filesystem-cli/: Cargo.toml
wit/: latch.wit  worlds.wit
(+10 files in other folders)
