[workspace]
resolver = "2"
members = [
    "components/*",
    "crates/*",
]

[workspace.dependencies]
chrono = { git = "https://github.com/chronotope/chrono.git", branch = "0.5.x" }
heck = "0.5"
latch-n = { path = "./crates/latch-n" }
wit-bindgen = { version = "0.58.0", git = "https://github.com/bytecodealliance/wit-bindgen.git", branch = "main" }
